--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <h1> <b> Sihu Park </b></h1>
 
 <div class="w3-bar w3-border w3-light-grey">
-  <a href="https://codepen.io/Sihu-Park/pen/MWzLMMg" class="w3-bar-item w3-button w3-black w3-left"> Home </a> 
-  <a href="https://codepen.io/Sihu-Park/pen/yLQZmey" class="w3-bar-item w3-button"> About me </a>
-  <a href="https://codepen.io/Sihu-Park/pen/MWzLNKw" class="w3-bar-item w3-button"> Projects</a>
+  <a href="index.html" class="w3-bar-item w3-button w3-black w3-left"> Home </a> 
+  <a href="aboutme.html" class="w3-bar-item w3-button"> About me </a>
+  <a href="project.html" class="w3-bar-item w3-button"> Projects</a>
 </div>
  <p> <h2> <div class = "Verdana"> Welcome to my Website! </h2> </p>
   <p class = "Verdana"> <div style="width: 730px;"> 
