--- a/aboutme.html
+++ b/aboutme.html
@@ -7,10 +7,10 @@
   <h1> <b> Sihu Park </b></h1>
 
 <div class="w3-bar w3-border w3-light-grey">
- <a href="https://codepen.io/Sihu-Park/pen/MWzLMMg" class="w3-bar-item w3-button  w3-left">Home </a>
- <a href="https://codepen.io/Sihu-Park/pen/yLQZmey" class="w3-bar-item w3-button w3-black"> About me</a>
- <a href="https://codepen.io/Sihu-Park/pen/MWzLNKw" class="w3-bar-item w3-button"> Projects</a>
- <a href="https://codepen.io/Sihu-Park/pen/ExOrqPN" class="w3-bar-item w3-button"> Personality</a>
+ <a href="index.html" class="w3-bar-item w3-button  w3-left">Home </a>
+ <a href="aboutme.html" class="w3-bar-item w3-button w3-black"> About me</a>
+ <a href="project.html" class="w3-bar-item w3-button"> Projects</a>
+ <a href="personality.html" class="w3-bar-item w3-button"> Personality</a>
 </div>
 </div>
 <p> <h2> <div class = "Verdana">  About me </h2> </p> 
