--- a/personality.html
+++ b/personality.html
@@ -7,10 +7,10 @@
   <h1> <b> Sihu Park </b></h1>
 
 <div class="w3-bar w3-border w3-light-grey">
- <a href="https://codepen.io/Sihu-Park/pen/MWzLMMg" class="w3-bar-item w3-button  w3-left">Home </a>
- <a href="https://codepen.io/Sihu-Park/pen/yLQZmey" class="w3-bar-item w3-button "> About me</a>
- <a href="https://codepen.io/Sihu-Park/pen/MWzLNKw" class="w3-bar-item w3-button"> Projects</a>
- <a href="https://codepen.io/Sihu-Park/pen/ExOrqPN" class="w3-bar-item w3-button w3-black"> Personality</a>
+ <a href="index.html" class="w3-bar-item w3-button  w3-left">Home </a>
+ <a href="aboutme.htmly" class="w3-bar-item w3-button "> About me</a>
+ <a href="project.html" class="w3-bar-item w3-button"> Projects</a>
+ <a href="personality" class="w3-bar-item w3-button w3-black"> Personality</a>
 </div>
 </div>
 <p class= "Verdana"> <div style="width: 750px;"> I am not really active person when there is 
