--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,9 @@
 <div class="w3-container">
    <h1> <b> Sihu Park </b></h1>
 <div class="w3-bar w3-border w3-light-grey">
- <a href="https://codepen.io/Sihu-Park/pen/MWzLMMg" class="w3-bar-item w3-button w3-left">Home </a>
- <a href="https://codepen.io/Sihu-Park/pen/yLQZmey" class="w3-bar-item w3-button"> About me</a>
- <a href="https://codepen.io/Sihu-Park/pen/MWzLNKw" class="w3-bar-item w3-button w3-black"> Projects</a>
+ <a href="index.html" class="w3-bar-item w3-button w3-left">Home </a>
+ <a href="aboutme.html" class="w3-bar-item w3-button"> About me</a>
+ <a href="project.html" class="w3-bar-item w3-button w3-black"> Projects</a>
 </div>
 
   <p> <h1 class= "start"> <b> All Projects </b> </p> </h1>
