--- a/personality.html
+++ b/personality.html
@@ -9,7 +9,7 @@
 <div class="w3-bar w3-border w3-light-grey">
  <a href="index.html" class="w3-bar-item w3-button  w3-left">Home </a>
  <a href="aboutme.htmly" class="w3-bar-item w3-button "> About me</a>
- <a href="project.html" class="w3-bar-item w3-button"> Projects</a>
+ <a href="projects.html" class="w3-bar-item w3-button"> Projects</a>
  <a href="personality" class="w3-bar-item w3-button w3-black"> Personality</a>
 </div>
 </div>
