--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
 <div class="w3-bar w3-border w3-light-grey">
  <a href="index.html" class="w3-bar-item w3-button w3-left">Home </a>
  <a href="aboutme.html" class="w3-bar-item w3-button"> About me</a>
- <a href="project.html" class="w3-bar-item w3-button w3-black"> Projects</a>
+ <a href="projects.html" class="w3-bar-item w3-button w3-black"> Projects</a>
 </div>
 
   <p> <h1 class= "start"> <b> All Projects </b> </p> </h1>
